--- a/manifest.json
+++ b/manifest.json
@@ -8,11 +8,11 @@
 
   "browser_action": {
     "default_title": "Tabs Should Rest",
-    "default_popup": "src/popup.html"
+    "default_popup": "popup.html"
   },
 
   "background": {
-    "scripts": ["src/js/background.js"],
+    "scripts": ["js/background.js"],
     "persistent": false
   },
   "permissions": [
