No popup.html now, going to clone OneTab first
And of course other stuff got deleted as well.

--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,7 @@
   "icons": {},
 
   "browser_action": {
-    "default_title": "Tabs Should Rest",
-    "default_popup": "popup.html"
+    "default_title": "Tabs Should Rest"
   },
 
   "background": {
