Another failed attempt
For some reason sendRes() doesn't work inside the
chrome.storage.local.get() callback so I can't get the data.

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   },
 
   "background": {
-    "scripts": ["js/background.js"],
+    "scripts": ["eventPage.js"],
     "persistent": false
   },
   "permissions": [
