Started generating HTML from tab groups
I also moved to using an event page instead of an event script.  Still
haven't quite figured this out yet, but it's coming along nicely.

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   },
 
   "background": {
-    "scripts": ["eventPage.js"],
+    "page": "tabsshouldrest.html",
     "persistent": false
   },
   "permissions": [
