--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,9 @@
 root = true
 
+[*]
+end_of_line = lf
+insert_final_newline = true
+
 [*.js]
 indent_style = space
 indent_size = 4
@@ -7,3 +11,9 @@ indent_size = 4
 [*.json]
 indent_style = space
 indent_size = 2
+
+[*.css]
+indent_style = tab
+
+[*.html]
+indent_style = tab
