--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Tabs Should Rest",
-  "version": "0.1.0",
+  "version": "0.2.0-alpha",
 
   "description": "Like OneTab but leaner, meaner and FOSS",
   "icons": {},
