--- a/manifest.json
+++ b/manifest.json
@@ -2,19 +2,17 @@
   "manifest_version": 2,
   "name": "Tabulator",
   "version": "0.5.0",
-
   "description": "Like OneTab but leaner and FOSS",
   "icons": {},
-
   "browser_action": {
     "default_popup": "popup.html",
     "default_title": "Tabulator"
   },
-
   "background": {
     "page": "tabulator.html",
     "persistent": false
   },
+  "options_page": "options.html",
   "permissions": [
     "tabs",
     "activeTab",
