--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "name": "Tabulator",
-  "version": "0.7.0",
-  "description": "Like OneTab but leaner and FOSS",
+  "version": "1.0.0",
+  "description": "Tabulator is a free open-source OpenTab alternative that helps reduce tab clutter and memory usage by saving all your open tabs into lists which can be restored at another time",
   "icons": {
 	 "128": "images/icon128.png",
 	 "16": "images/icon16.png",
