--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "husky": "^1.3.1",
     "prettier": "^1.15.3",
     "pretty-quick": "^1.8.0"
+  },
+  "dependencies": {
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.0"
   }
 }
