--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.3.1",
     "mithril": "0.1",
     "moment": "^2.23.0",
+    "webextension-polyfill": "^0.3.1",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0"
   }
